--- a/WebApp/templates/personal_collections.html
+++ b/WebApp/templates/personal_collections.html
@@ -11,6 +11,21 @@
 <body>
 
     <header>
+        <style type="text/css">
+        .bt {
+         background-color:#edf1f1;
+         cursor:pointer;
+         display: block;
+         width: 100%;
+         border: none;
+         border-radius: 8px;
+         padding: 14px 28px;
+         font-size: 16px;
+         cursor: pointer;
+         text-align: center;
+     }
+     </style>
+
         <h1>Your Collections</h1>
         <nav >
             <a href="{{url_for('main_page', user_id = user_id)}}">
