--- a/WebApp/templates/main_page.html
+++ b/WebApp/templates/main_page.html
@@ -11,6 +11,21 @@
 <body>
 
     <header>
+        <style type="text/css">
+            .bt {
+             background-color:#edf1f1;
+             cursor:pointer;
+             display: block;
+             width: 100%;
+             border: none;
+             border-radius: 8px;
+             padding: 14px 28px;
+             font-size: 16px;
+             cursor: pointer;
+             text-align: center;
+         }
+         </style>
+
         <h1>Collection Showcase</h1>
         <nav >
             <a href="{{url_for('my_collections', user_id = user_id)}}">
